--- a/2025/giorno_05.ipynb
+++ b/2025/giorno_05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -85,11 +85,89 @@
     "        out_1+=1\n",
     "print(out_1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funzioni parte 2\n",
+    "def conta_elementi(intervallo):\n",
+    "    return intervallo[1]-intervallo[0]+1\n",
+    "\n",
+    "def interseca(x,y):\n",
+    "    if x[0]<=y[0]:\n",
+    "        a,b =x , y\n",
+    "    else:\n",
+    "        a, b =y,x\n",
+    "    \n",
+    "    if a[0]< b[0] and a[1]<b[0]:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "353507173555373\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parte 2\n",
+    "\n",
+    "out_2=0\n",
+    "\n",
+    "intervalli=data[0]\n",
+    "\n",
+    "lista_unione=[]\n",
+    "for intervallo in intervalli:\n",
+    "\n",
+    "    intersecati=[]\n",
+    "    for item in lista_unione:\n",
+    "        if interseca(intervallo, item):\n",
+    "            intersecati.append(item)\n",
+    "    for item in intersecati:\n",
+    "        lista_unione.remove(item)\n",
+    "\n",
+    "    \n",
+    "    if intersecati==[]:\n",
+    "        lista_unione.append(intervallo)\n",
+    "    else:       \n",
+    "        if intervallo[0]<=intersecati[0][0]:\n",
+    "            a_1=intervallo[0]\n",
+    "        else:\n",
+    "            a_1=intersecati[0][0]\n",
+    "            \n",
+    "        if intervallo[1]>=intersecati[-1][1]:\n",
+    "            a_2=intervallo[1]\n",
+    "        else:\n",
+    "            a_2=intersecati[-1][1]\n",
+    "        lista_unione.append((a_1,a_2))\n",
+    "    \n",
+    "    lista_unione.sort(key= lambda x: x[0])\n",
+    "\n",
+    "for intervallo in lista_unione:\n",
+    "    out_2+=conta_elementi(intervallo)\n",
+    "\n",
+    "print(out_2)\n",
+    "            \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.12 64-bit",
+   "display_name": "venv_AoC_25",
    "language": "python",
    "name": "python3"
   },
@@ -103,14 +181,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
