--- a/2025/giorno_09.ipynb
+++ b/2025/giorno_09.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "id": "1d9bec02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ingestion\n",
+    "#Import data\n",
     "\n",
     "\n",
     "def leggi_file_txt(nome_file):\n",
@@ -16,13 +17,11 @@
     "        with open(nome_file, 'r') as file:\n",
     "            for riga in file:\n",
     "                lista_righe.append(list(map(int, riga[:-1].split(','))))\n",
-    "                \n",
     "    except FileNotFoundError:\n",
     "        print(f\"Errore: Il file {nome_file} non è stato trovato.\")\n",
     "    except ValueError as e:\n",
     "        print(f\"Errore durante la conversione dei dati: {e}\")\n",
-    "    return  lista_righe\n",
-    "\n",
+    "    return lista_righe\n",
     "\n",
     "nome_file = 'input_day9.txt'\n",
     "nome_file_test= 'input_day9_test.txt'\n",
@@ -32,7 +31,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "72edef5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,17 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "7d7d8f01",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4765757080\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parte 1\n",
     "\n",
@@ -70,22 +63,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
+   "id": "3fb7eff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shapely\n",
-    "input=data_test\n",
+    "# Funzioni parte 2\n",
     "\n",
-    "shape = shapely.convex_hull(shapely.MultiPoint(input))\n",
+    "def range_rettangolo(X, Y):\n",
+    "    return [[min(X[0], Y[0]),max(X[0], Y[0])],[min(X[1], Y[1]),max(X[1], Y[1])]]\n",
     "\n",
-    "shape.area\n"
+    "def range_rettangolo(X, Y):\n",
+    "    return [[min(X[0], Y[0]),max(X[0], Y[0])],[min(X[1], Y[1]),max(X[1], Y[1])]]\n",
+    "\n",
+    "def area(X,Y):\n",
+    "    return (abs(X[0]-Y[0])+1)*(abs(X[1]-Y[1])+1)\n",
+    "\n",
+    "\n",
+    "def is_ok(lista_input, rettangolo):\n",
+    "    flag=True\n",
+    "    for vertice in lista_input:\n",
+    "\n",
+    "        if rettangolo[0][0]<vertice[0]<rettangolo[0][1] and rettangolo[1][0]<vertice[1]<rettangolo[1][1]:\n",
+    "   \n",
+    "            flag=False\n",
+    "            break\n",
+    "        \n",
+    "    return flag\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "24fbee73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4624346420\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Parte 2\n",
+    "\n",
+    "out_2=0\n",
+    "input=data\n",
+    "\n",
+    "\n",
+    "lista_aree = [area(input[i],input[j]) for i in range(len(input)) for j in range(i+1,len(input)) if is_ok(input, range_rettangolo(input[i],input[j]))]\n",
+    "\n",
+    "\n",
+    "out_2=max(lista_aree)\n",
+    "print(out_2)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.12 ('venv_aoc25': venv)",
+   "display_name": "venv_aoc25",
    "language": "python",
    "name": "python3"
   },
@@ -99,15 +137,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "48bdc4c50db76e245c193fb1d1ab89acd9c63c888cd1aa88445f672bc33f462e"
-   }
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
