--- a/2025/giorno_10.ipynb
+++ b/2025/giorno_10.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ingestion\n",
-    "\n",
     "\n",
     "def leggi_file_txt(nome_file):\n",
     "\n",
@@ -22,12 +21,24 @@
     "        print(f\"Errore: Il file {nome_file} non è stato trovato.\")\n",
     "    except ValueError as e:\n",
     "        print(f\"Errore durante la conversione dei dati: {e}\")\n",
-    "\n",
+    "    out=[]\n",
     "    for riga in lista_righe:\n",
     "        disposizione=[]\n",
     "        for carattere in riga[0]:\n",
-    "            print(1)\n",
-    "    return  lista_righe\n",
+    "            if carattere=='.':\n",
+    "                disposizione.append(0)\n",
+    "            elif carattere=='#':\n",
+    "                disposizione.append(1)\n",
+    "        pulsanti=[]\n",
+    "        for entrata in riga[1:-1]:\n",
+    "            pulsante=[]\n",
+    "            for carattere in list(entrata):\n",
+    "                if carattere.isdigit():\n",
+    "                    pulsante.append(int(carattere))\n",
+    "            pulsanti.append(pulsante)\n",
+    "        out.append([disposizione, pulsanti])\n",
+    "                   \n",
+    "    return  out\n",
     "\n",
     "\n",
     "nome_file = 'input_day10.txt'\n",
@@ -38,18 +49,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Funzioni parte 1\n",
+    "\n",
+    "import itertools\n",
+    "\n",
+    "def combinazioni(n):\n",
+    "    field = [0, 1] \n",
+    "    out=[]\n",
+    "    for item in itertools.product(field, repeat=n):\n",
+    "        out.append(item)\n",
+    "    return out\n",
+    "\n",
+    "def premi_pulsanti(combinazione, pulsanti, numero_luci):\n",
+    "    luci=[0 for i in range(numero_luci)]\n",
+    "    for i in range(len(combinazione)):\n",
+    "        if combinazione[i]==1:\n",
+    "                #print('la comb era non zero per ', pulsanti[i])\n",
+    "                for pulsante in pulsanti[i]:\n",
+    "                    luci[pulsante]=(luci[pulsante]+1)%2\n",
+    "    return luci\n",
+    "\n",
+    "def risolvi(problema):\n",
+    "    soluzioni=[]\n",
+    "    for comb in combinazioni(len(problema[1])):\n",
+    "        if premi_pulsanti(comb, problema[1], len(problema[0])) == problema[0]:\n",
+    "            soluzioni.append(sum(comb))\n",
+    "    return min(soluzioni)\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['(', '1', ',', '3', ')']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "417\n"
+     ]
     }
    ],
    "source": [
@@ -57,22 +101,18 @@
     "\n",
     "out_1=0\n",
     "\n",
-    "input=data_test\n",
-    "\n",
+    "input=data\n",
+    "for macchina in input:\n",
+    "    out_1+=risolvi(macchina)\n",
+    "    \n",
+    "print(out_1)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.12 ('venv_aoc25': venv)",
+   "display_name": "venv_aoc25",
    "language": "python",
    "name": "python3"
   },
@@ -86,14 +126,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "48bdc4c50db76e245c193fb1d1ab89acd9c63c888cd1aa88445f672bc33f462e"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
