--- a/2025/giorno_09.ipynb
+++ b/2025/giorno_09.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1d9bec02",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Import data\n",
+    "# Ingestion\n",
     "\n",
     "\n",
     "def leggi_file_txt(nome_file):\n",
@@ -17,11 +16,13 @@
     "        with open(nome_file, 'r') as file:\n",
     "            for riga in file:\n",
     "                lista_righe.append(list(map(int, riga[:-1].split(','))))\n",
+    "                \n",
     "    except FileNotFoundError:\n",
     "        print(f\"Errore: Il file {nome_file} non è stato trovato.\")\n",
     "    except ValueError as e:\n",
     "        print(f\"Errore durante la conversione dei dati: {e}\")\n",
-    "    return lista_righe\n",
+    "    return  lista_righe\n",
+    "\n",
     "\n",
     "nome_file = 'input_day9.txt'\n",
     "nome_file_test= 'input_day9_test.txt'\n",
@@ -31,8 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "72edef5f",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,64 +45,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d7d8f01",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parte 1\n",
-    "\n",
-    "out_1=0\n",
-    "input=data\n",
-    "\n",
-    "lista_distanze = [area(input[i],input[j]) for i in range(len(input)) for j in range(i+1,len(input))]\n",
-    "out_1=max(lista_distanze)\n",
-    "\n",
-    "print(out_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "3fb7eff3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Funzioni parte 2\n",
-    "\n",
-    "def range_rettangolo(X, Y):\n",
-    "    return [[min(X[0], Y[0]),max(X[0], Y[0])],[min(X[1], Y[1]),max(X[1], Y[1])]]\n",
-    "\n",
-    "def range_rettangolo(X, Y):\n",
-    "    return [[min(X[0], Y[0]),max(X[0], Y[0])],[min(X[1], Y[1]),max(X[1], Y[1])]]\n",
-    "\n",
-    "def area(X,Y):\n",
-    "    return (abs(X[0]-Y[0])+1)*(abs(X[1]-Y[1])+1)\n",
-    "\n",
-    "\n",
-    "def is_ok(lista_input, rettangolo):\n",
-    "    flag=True\n",
-    "    for vertice in lista_input:\n",
-    "\n",
-    "        if rettangolo[0][0]<vertice[0]<rettangolo[0][1] and rettangolo[1][0]<vertice[1]<rettangolo[1][1]:\n",
-    "   \n",
-    "            flag=False\n",
-    "            break\n",
-    "        \n",
-    "    return flag\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "24fbee73",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4624346420\n"
+      "4765757080\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parte 1\n",
+    "\n",
+    "out_1=0\n",
+    "input=data\n",
+    "\n",
+    "lista_aree = [area(input[i],input[j]) for i in range(len(input)) for j in range(i+1,len(input))]\n",
+    "out_1=max(lista_aree)\n",
+    "\n",
+    "print(out_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Funzioni parte 2\n",
+    "\n",
+    "import shapely\n",
+    "\n",
+    "\n",
+    "def vertici(X,Y):\n",
+    "    out=[(min(X[0],Y[0]),min(X[1],Y[1])),(max(X[0],Y[0]),min(X[1],Y[1])), (max(X[0],Y[0]),max(X[1],Y[1])),(min(X[0],Y[0]),max(X[1],Y[1]))]\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def is_ok(vertice_1, vertice_2, forma):\n",
+    "    rettangolo=shapely.Polygon(vertici(vertice_1,vertice_2))\n",
+    "    if forma.contains(rettangolo):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1498673376\n"
      ]
     }
    ],
@@ -112,18 +111,18 @@
     "out_2=0\n",
     "input=data\n",
     "\n",
+    "shape = shapely.Polygon(input)\n",
     "\n",
-    "lista_aree = [area(input[i],input[j]) for i in range(len(input)) for j in range(i+1,len(input)) if is_ok(input, range_rettangolo(input[i],input[j]))]\n",
+    "lista_aree_2 = [area(input[i],input[j]) for i in range(len(input)) for j in range(i+1,len(input)) if is_ok(input[i],input[j],shape)]\n",
     "\n",
-    "\n",
-    "out_2=max(lista_aree)\n",
-    "print(out_2)"
+    "out_2=max(lista_aree_2)\n",
+    "print(out_2)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_aoc25",
+   "display_name": "Python 3.10.12 ('venv_aoc25': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -137,9 +136,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "48bdc4c50db76e245c193fb1d1ab89acd9c63c888cd1aa88445f672bc33f462e"
+   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
