--- a/2025/giorno_10.ipynb
+++ b/2025/giorno_10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "                if carattere.isdigit():\n",
     "                    pulsante.append(int(carattere))\n",
     "            pulsanti.append(pulsante)\n",
-    "        out.append([disposizione, pulsanti])\n",
+    "        joltage=[ int(item)  for item in  riga[-1][1:-1].split(',')]\n",
+    "        out.append([disposizione, pulsanti, joltage])\n",
     "                   \n",
     "    return  out\n",
     "\n",
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -107,11 +108,90 @@
     "print(out_1)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Funzioni parte 2\n",
+    "from z3 import *\n",
+    "\n",
+    "def trova_matrice(lista_pulsanti, termine_noto):\n",
+    "    A=[]\n",
+    "    for pulsante in lista_pulsanti:\n",
+    "        app=[]\n",
+    "        for i in range(len(termine_noto)):\n",
+    "            if i in pulsante:\n",
+    "                app.append(1)\n",
+    "            else:\n",
+    "                app.append(0)\n",
+    "        A.append(app)\n",
+    "    return A\n",
+    "\n",
+    "def premi_pulsanti_unlimited(combinazione, pulsanti, numero_luci):\n",
+    "    luci=[0 for i in range(numero_luci)]\n",
+    "    for i in range(len(combinazione)):\n",
+    "        if combinazione[i]!=0:\n",
+    "                for pulsante in pulsanti[i]:\n",
+    "                    luci[pulsante]=luci[pulsante]+combinazione[i]\n",
+    "    return luci\n",
+    "\n",
+    "\n",
+    "def risolvi_diofanteo(A,b):\n",
+    "    n=len(A)\n",
+    "    m=len(b)\n",
+    "\n",
+    "    x = [Int(f\"x{i}\") for i in range(n)]\n",
+    "\n",
+    "    opt=Optimize()\n",
+    "    for x_i in x:\n",
+    "        opt.add(x_i >= 0)\n",
+    "\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        opt.add(Sum(A[j][i]* x[j] for j in range(n))==b[i])\n",
+    "    \n",
+    "    opt.minimize(Sum(x))\n",
+    "\n",
+    "    \n",
+    "    if opt.check() == sat:\n",
+    "        model = opt.model()\n",
+    "        return [model[xi].as_long() for xi in x]\n",
+    "    else:\n",
+    "         return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Parte 2\n",
+    "out_2=0\n",
+    "\n",
+    "for riga in data:\n",
+    "    M=trova_matrice(riga[1], riga[2])\n",
+    "    soluzione=risolvi_diofanteo(M, riga[2])\n",
+    "    out_2+=sum(soluzione)\n",
+    "\n",
+    "print(out_2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv_aoc25",
+   "display_name": "Python 3.10.12 ('venv_aoc25': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -125,9 +205,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "48bdc4c50db76e245c193fb1d1ab89acd9c63c888cd1aa88445f672bc33f462e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
